--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="same.css">
     <link rel="stylesheet" href="index.css">
-    <link rel="icon" href="./photo/icon.png">
+    <link rel="icon" href="./photo/黑仙.png">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@600&display=swap" rel="stylesheet">
     <title>歡樂仙桶影像工作室</title>
 </head>
@@ -63,7 +63,7 @@
 
         <div class="section2">
 
-            
+
 
         </div>
 
