--- a/index.html
+++ b/index.html
@@ -65,14 +65,43 @@
             <span>SCROLL</span>
         </div>
 
-        <div class="section2">
-
-        </div>
-
         <div class="marquee-container">
             <div class="marquee">
                 <span style="margin-top: 3px;">服務項目 Services</span>            
             </div>
+        </div>
+
+        <div class="section2">
+            
+            <div class="section2_item_container">
+
+                <a href="#" class="section2_item">
+                    <img src="./photo/商業廣告.jpg" alt="商業廣告">
+                    <h3>商業廣告</h3>
+                </a>
+
+                <a href="#" class="section2_item">
+                    <img src="./photo/音樂MV.jpg" alt="音樂MV">
+                    <h3>音樂MV</h3>
+                </a>
+
+                <a href="#" class="section2_item">
+                    <img src="./photo/活動紀錄.jpg" alt="活動紀錄">
+                    <h3>活動紀錄</h3>
+                </a>
+
+                <a href="#" class="section2_item">
+                    <img src="./photo/教學影片.jpg" alt="教學影片">
+                    <h3>教學影片</h3>
+                </a>
+
+                <a href="#" class="section2_item">
+                    <img src="./photo/社群素材建立.jpg" alt="社群素材建立">
+                    <h3>社群素材建立</h3>
+                </a>
+
+            </div>
+
         </div>
 
         <footer class="footer">
