--- a/index.html
+++ b/index.html
@@ -30,12 +30,13 @@
             <a href="index.html" style="top:8%;font-weight:700;">首頁</a>
 
             <p style="top:17%; border-bottom: 2px solid #1E293B;font-weight:700;">關於作品</p>
-            <a href="about.html#idea" style="top:35%;font-size:16px;font-weight:600;">商業廣告</a>
-            <a href="about.html#place" style="top:43%;font-size:16px;font-weight:600;">音樂MV</a>
-            <a href="about.html#team" style="top:51%;font-size:16px;font-weight:600;">活動紀錄</a>
-            <a href="about.html#teachers" style="top:59%;font-size:16px;font-weight:600;">社群素材建立</a>
+            <a href="＃" style="top:35%;font-size:16px;font-weight:600;">商業廣告</a>
+            <a href="＃" style="top:43%;font-size:16px;font-weight:600;">音樂MV</a>
+            <a href="＃" style="top:51%;font-size:16px;font-weight:600;">活動紀錄</a>
+            <a href="＃" style="top:59%;font-size:16px;font-weight:600;">教學影片</a>
+            <a href="＃" style="top:67%;font-size:16px;font-weight:600;">社群素材建立</a>
 
-            <a href="aboutworks.html" style="top:73%;font-weight:700;">關於團隊</a>
+            <a href="＃" style="top:80%;font-weight:700;">關於團隊</a>
 
         </div> 
 
