--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="same.css">
     <link rel="stylesheet" href="index.css">
     <link rel="icon" href="./photo/黑仙.png">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">    <title>歡樂仙桶影像工作室</title>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">    
+    <title>歡樂仙桶影像工作室</title>
 </head>
 
 <body>
@@ -36,7 +37,7 @@
             <a href="＃" style="top:59%;font-size:16px;font-weight:600;">教學影片</a>
             <a href="＃" style="top:67%;font-size:16px;font-weight:600;">社群素材建立</a>
 
-            <a href="＃" style="top:80%;font-weight:700;">關於團隊</a>
+            <a href="about.html" style="top:80%;font-weight:700;">關於團隊</a>
 
         </div> 
 
