--- a/共同/same.html
+++ b/共同/same.html
@@ -63,7 +63,7 @@
                         <p><a href="about.html#idea" id="font-size">展覽理念</a></p>
                         <p><a href="about.html#place" id="font-size">展覽地點</a></p>
                         <p><a href="about.html#team" id="font-size">籌備團隊</a></p>
-                        <p><a href="about.html#teachers" id="font-size">班導師</a></p>
+                        <p><a href="about.html#teams" id="font-size">班導師</a></p>
 
                     </div>
                     
@@ -99,7 +99,7 @@
             <a href="about.html#idea" style="top:33%;font-size:16px;">展覽理念</a>
             <a href="about.html#place" style="top:41%;font-size:16px;">展覽地點</a>
             <a href="about.html#team" style="top:49%;font-size:16px;">籌備團隊</a>
-            <a href="about.html#teachers" style="top:57%;font-size:16px;">班導師</a>
+            <a href="about.html#teams" style="top:57%;font-size:16px;">班導師</a>
 
             <a href="aboutworks.html" style="top:70%;">關於作品</a>
             <img src="./photo/menu_line.png" width="100%" style="position: absolute;top:79%;left:15%;">
